--- a/src/Gemini/Modules/ToolBars/Views/ToolBarsView.xaml
+++ b/src/Gemini/Modules/ToolBars/Views/ToolBarsView.xaml
@@ -13,6 +13,6 @@
     <controls:ToolBarTrayContainer>
         <ToolBarTray x:Name="ToolBarTray"
 				     Visibility="{Binding Visible, Converter={StaticResource BoolToVisibilityConverter}}"
-				     IsLocked={Binding Locked}/>
+				     IsLocked="{Binding Locked}"/>
     </controls:ToolBarTrayContainer>
 </UserControl>
