Applied naming fixes (breaking change)

--- a/src/Gemini/Modules/Shell/Views/ShellView.xaml
+++ b/src/Gemini/Modules/Shell/Views/ShellView.xaml
@@ -28,7 +28,7 @@
 
         <xcad:DockingManager x:Name="Manager" DocumentsSource="{Binding Items}"
                              AnchorablesSource="{Binding Tools}"
-                             ActiveContent="{Binding ActiveLayoutItem, Mode=TwoWay}"
+                             ActiveContent="{Binding ActivePanel, Mode=TwoWay}"
                              LayoutUpdated="OnManagerLayoutUpdated"
                              b:DropFilesBehavior.AllowOpen="True"
                              AllowDrop="True">
