--- a/src/Gemini/Modules/Shell/Views/ShellView.xaml
+++ b/src/Gemini/Modules/Shell/Views/ShellView.xaml
@@ -68,6 +68,7 @@
                         <Style TargetType="{x:Type xcad:LayoutItem}">
                             <Setter Property="ContentId" Value="{Binding Model.ContentId}" />
                             <Setter Property="Title" Value="{Binding Model.DisplayName, Mode=OneWay}" />
+                            <Setter Property="ToolTip" Value="{Binding Model.ToolTip}" />
                             <Setter Property="CloseCommand" Value="{Binding Model.CloseCommand}" />
                             <Setter Property="IconSource"
                                     Value="{Binding Model.IconSource, Converter={StaticResource NullableValueConverter}}" />
@@ -78,6 +79,7 @@
                         <Style TargetType="{x:Type xcad:LayoutAnchorableItem}">
                             <Setter Property="ContentId" Value="{Binding Model.ContentId}" />
                             <Setter Property="Title" Value="{Binding Model.DisplayName, Mode=OneWay}" />
+                            <Setter Property="ToolTip" Value="{Binding Model.ToolTip}" />
                             <Setter Property="CloseCommand" Value="{Binding Model.CloseCommand}" />
                             <Setter Property="IconSource"
                                     Value="{Binding Model.IconSource, Converter={StaticResource NullableValueConverter}}" />
