--- a/src/Gemini/Modules/MainMenu/Views/MainMenuSettingsView.xaml
+++ b/src/Gemini/Modules/MainMenu/Views/MainMenuSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+<UserControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,10 +12,11 @@
     d:DesignWidth="300" d:DataContext="{d:DesignInstance viewModels:MainMenuSettingsViewModel}"
     IsTabStop="False">
     <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <converters:CultureInfoNameConverter x:Key="CultureInfoNameConverter" />
     </UserControl.Resources>
     <StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="0,3,0,0">
+        <StackPanel Orientation="Horizontal" Margin="0,3,0,0" Visibility="{Binding ThemeAllowEditing, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label Width="100" Content="{l:Static p:Resources.MainMenuSettingsColorTheme}" />
             <ComboBox ItemsSource="{Binding Themes}"
                       SelectedItem="{Binding SelectedTheme}">
@@ -26,7 +27,7 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="0,3,0,0">
+        <StackPanel Orientation="Horizontal" Margin="0,3,0,0" Visibility="{Binding LanguageAllowEditing, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label Width="100" Content="{l:Static p:Resources.MainMenuSettingsLanguage}" />
             <ComboBox ItemsSource="{Binding Languages}"
                       SelectedItem="{Binding SelectedLanguage}">
