--- a/src/Gemini/Modules/Toolbox/Views/ToolboxView.xaml
+++ b/src/Gemini/Modules/Toolbox/Views/ToolboxView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Gemini.Modules.Toolbox.Views.ToolboxView"
+<UserControl x:Class="Gemini.Modules.Toolbox.Views.ToolboxView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -39,7 +39,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="18 0 0 0">
-                        <Image Source="{Binding IconSource}" Margin="0 0 5 0" Width="16" />
+                        <Image Source="{Binding IconSource}" Margin="0 0 5 0" Width="32" />
                         <TextBlock Text="{Binding Name}" Foreground="{DynamicResource EnvironmentToolWindowText}"
                                    Padding="2" />
                     </StackPanel>
