--- a/src/Gemini.Modules.Inspector/Inspectors/FilePathEditorView.xaml
+++ b/src/Gemini.Modules.Inspector/Inspectors/FilePathEditorView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Gemini.Modules.Inspector.Inspectors.FileInfoEditorView"
+﻿<UserControl x:Class="Gemini.Modules.Inspector.Inspectors.FilePathEditorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,9 +15,10 @@
         </Grid.ColumnDefinitions>
 
         <TextBox
+            DataContext="{Binding Value}"
             Grid.Row="0"
             Grid.Column="0"
-            Text="{Binding ValueString}"
+            Text="{Binding FullName}"
             Margin="2 0 0 0"/>
         <Button 
             Grid.Row="0"
