--- a/src/Gemini/Modules/MainWindow/Views/MainWindowView.xaml
+++ b/src/Gemini/Modules/MainWindow/Views/MainWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<mahapps:MetroWindow x:Class="Gemini.Modules.MainWindow.Views.MainWindowView"
+<mahapps:MetroWindow x:Class="Gemini.Modules.MainWindow.Views.MainWindowView"
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:mahapps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -6,10 +6,12 @@
                      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                      xmlns:behaviours="http://metro.mahapps.com/winfx/xaml/shared"
                      xmlns:behaviors="clr-namespace:Gemini.Framework.Behaviors"
-                     WindowTransitionsEnabled="False"
-                     Title="{Binding Title}"
-                     Icon="{Binding Icon}"
-                     Width="{Binding Width, Mode=TwoWay}"
+                     WindowTransitionsEnabled="False" 
+                     Title="{Binding Title}" 
+                     Icon="{Binding Icon}" 
+                     Left="{Binding Left, Mode=TwoWay}" 
+                     Top="{Binding Top, Mode=TwoWay}" 
+                     Width="{Binding Width, Mode=TwoWay}" 
                      Height="{Binding Height, Mode=TwoWay}"
                      WindowStartupLocation="CenterScreen"
                      WindowState="{Binding WindowState}"
